Ajout des fonctionnalités backend